trace2syz/trace2syz/lex.go

//line trace2syz/straceLex.rl:1
//nolint
package trace2syz

import (
    "fmt"
    "encoding/hex"
    "strconv"
    "strings"
    "github.com/google/syzkaller/pkg/log"
)


//line trace2syz/lex.go:16
const strace_start int = 174
const strace_first_final int = 174
const strace_error int = 0

const strace_en_comment int = 218
const strace_en_main int = 174


//line trace2syz/straceLex.rl:18


type Stracelexer struct {
    result *Syscall
    data []byte
    p, pe, cs int
    ts, te, act int
}

func newStraceLexer (data []byte) *Stracelexer {
    lex := &Stracelexer {
        data: data,
        pe: len(data),
    }

    
//line trace2syz/lex.go:42
	{
	 lex.cs = strace_start
	 lex.ts = 0
	 lex.te = 0
	 lex.act = 0
	}

//line trace2syz/straceLex.rl:34
    return lex
}

func (lex *Stracelexer) Lex(out *StraceSymType) int {
    eof := lex.pe
    tok := 0
    
//line trace2syz/lex.go:58
	{
	if ( lex.p) == ( lex.pe) {
		goto _test_eof
	}
	switch  lex.cs {
	case 174:
		goto st_case_174
	case 0:
		goto st_case_0
	case 1:
		goto st_case_1
	case 2:
		goto st_case_2
	case 175:
		goto st_case_175
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 176:
		goto st_case_176
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 177:
		goto st_case_177
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 178:
		goto st_case_178
	case 179:
		goto st_case_179
	case 180:
		goto st_case_180
	case 181:
		goto st_case_181
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 70:
		goto st_case_70
	case 71:
		goto st_case_71
	case 72:
		goto st_case_72
	case 73:
		goto st_case_73
	case 74:
		goto st_case_74
	case 182:
		goto st_case_182
	case 183:
		goto st_case_183
	case 184:
		goto st_case_184
	case 185:
		goto st_case_185
	case 75:
		goto st_case_75
	case 76:
		goto st_case_76
	case 77:
		goto st_case_77
	case 78:
		goto st_case_78
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 81:
		goto st_case_81
	case 82:
		goto st_case_82
	case 83:
		goto st_case_83
	case 84:
		goto st_case_84
	case 85:
		goto st_case_85
	case 86:
		goto st_case_86
	case 87:
		goto st_case_87
	case 88:
		goto st_case_88
	case 186:
		goto st_case_186
	case 89:
		goto st_case_89
	case 90:
		goto st_case_90
	case 91:
		goto st_case_91
	case 92:
		goto st_case_92
	case 187:
		goto st_case_187
	case 93:
		goto st_case_93
	case 188:
		goto st_case_188
	case 189:
		goto st_case_189
	case 94:
		goto st_case_94
	case 95:
		goto st_case_95
	case 96:
		goto st_case_96
	case 97:
		goto st_case_97
	case 98:
		goto st_case_98
	case 99:
		goto st_case_99
	case 100:
		goto st_case_100
	case 101:
		goto st_case_101
	case 102:
		goto st_case_102
	case 103:
		goto st_case_103
	case 104:
		goto st_case_104
	case 105:
		goto st_case_105
	case 106:
		goto st_case_106
	case 107:
		goto st_case_107
	case 108:
		goto st_case_108
	case 109:
		goto st_case_109
	case 110:
		goto st_case_110
	case 111:
		goto st_case_111
	case 112:
		goto st_case_112
	case 190:
		goto st_case_190
	case 191:
		goto st_case_191
	case 192:
		goto st_case_192
	case 193:
		goto st_case_193
	case 194:
		goto st_case_194
	case 113:
		goto st_case_113
	case 114:
		goto st_case_114
	case 115:
		goto st_case_115
	case 116:
		goto st_case_116
	case 117:
		goto st_case_117
	case 118:
		goto st_case_118
	case 119:
		goto st_case_119
	case 120:
		goto st_case_120
	case 121:
		goto st_case_121
	case 122:
		goto st_case_122
	case 123:
		goto st_case_123
	case 124:
		goto st_case_124
	case 125:
		goto st_case_125
	case 126:
		goto st_case_126
	case 195:
		goto st_case_195
	case 127:
		goto st_case_127
	case 128:
		goto st_case_128
	case 129:
		goto st_case_129
	case 130:
		goto st_case_130
	case 131:
		goto st_case_131
	case 132:
		goto st_case_132
	case 133:
		goto st_case_133
	case 134:
		goto st_case_134
	case 135:
		goto st_case_135
	case 136:
		goto st_case_136
	case 137:
		goto st_case_137
	case 138:
		goto st_case_138
	case 139:
		goto st_case_139
	case 140:
		goto st_case_140
	case 141:
		goto st_case_141
	case 142:
		goto st_case_142
	case 143:
		goto st_case_143
	case 144:
		goto st_case_144
	case 145:
		goto st_case_145
	case 146:
		goto st_case_146
	case 147:
		goto st_case_147
	case 148:
		goto st_case_148
	case 149:
		goto st_case_149
	case 150:
		goto st_case_150
	case 151:
		goto st_case_151
	case 152:
		goto st_case_152
	case 153:
		goto st_case_153
	case 154:
		goto st_case_154
	case 155:
		goto st_case_155
	case 156:
		goto st_case_156
	case 157:
		goto st_case_157
	case 158:
		goto st_case_158
	case 159:
		goto st_case_159
	case 160:
		goto st_case_160
	case 161:
		goto st_case_161
	case 162:
		goto st_case_162
	case 163:
		goto st_case_163
	case 164:
		goto st_case_164
	case 165:
		goto st_case_165
	case 166:
		goto st_case_166
	case 167:
		goto st_case_167
	case 168:
		goto st_case_168
	case 169:
		goto st_case_169
	case 170:
		goto st_case_170
	case 171:
		goto st_case_171
	case 172:
		goto st_case_172
	case 196:
		goto st_case_196
	case 173:
		goto st_case_173
	case 197:
		goto st_case_197
	case 198:
		goto st_case_198
	case 199:
		goto st_case_199
	case 200:
		goto st_case_200
	case 201:
		goto st_case_201
	case 202:
		goto st_case_202
	case 203:
		goto st_case_203
	case 204:
		goto st_case_204
	case 205:
		goto st_case_205
	case 206:
		goto st_case_206
	case 207:
		goto st_case_207
	case 208:
		goto st_case_208
	case 209:
		goto st_case_209
	case 210:
		goto st_case_210
	case 211:
		goto st_case_211
	case 212:
		goto st_case_212
	case 213:
		goto st_case_213
	case 214:
		goto st_case_214
	case 215:
		goto st_case_215
	case 216:
		goto st_case_216
	case 217:
		goto st_case_217
	case 218:
		goto st_case_218
	case 219:
		goto st_case_219
	}
	goto st_out
tr18:
//line trace2syz/straceLex.rl:74
 lex.te = ( lex.p)+1
{out.data = string(lex.data[lex.ts+1:lex.te-1]); tok=IPV4; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr29:
//line trace2syz/straceLex.rl:75
 lex.te = ( lex.p)+1
{out.data = string(lex.data[lex.ts+1:lex.te-1]); tok=IPV6; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr60:
//line trace2syz/straceLex.rl:107
( lex.p) = ( lex.te) - 1
{tok = COMMA;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr64:
//line NONE:1
	switch  lex.act {
	case 0:
	{{goto st0 }}
	case 3:
	{( lex.p) = ( lex.te) - 1
out.val_int, _ = strconv.ParseInt(string(lex.data[lex.ts : lex.te]), 10, 64); tok = INT;{( lex.p)++;  lex.cs = 174; goto _out }}
	case 5:
	{( lex.p) = ( lex.te) - 1
out.val_int, _ = strconv.ParseInt(string(lex.data[lex.ts : lex.te]), 8, 64); tok = INT; {( lex.p)++;  lex.cs = 174; goto _out }}
	case 10:
	{( lex.p) = ( lex.te) - 1
tok = NULL; {( lex.p)++;  lex.cs = 174; goto _out }}
	case 11:
	{( lex.p) = ( lex.te) - 1
out.data = string(lex.data[lex.ts:lex.te]); tok = FLAG; {( lex.p)++;  lex.cs = 174; goto _out }}
	case 13:
	{( lex.p) = ( lex.te) - 1
out.data = string(lex.data[lex.ts:lex.te]); tok = IDENTIFIER;{( lex.p)++;  lex.cs = 174; goto _out }}
	case 16:
	{( lex.p) = ( lex.te) - 1
tok = KEYWORD; {( lex.p)++;  lex.cs = 174; goto _out }}
	case 18:
	{( lex.p) = ( lex.te) - 1
tok = OR; {( lex.p)++;  lex.cs = 174; goto _out }}
	case 40:
	{( lex.p) = ( lex.te) - 1
tok = COMMA;{( lex.p)++;  lex.cs = 174; goto _out }}
	}
	
	goto st174
tr78:
//line trace2syz/straceLex.rl:81
 lex.te = ( lex.p)+1
{tok = UNFINISHED; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr79:
//line trace2syz/straceLex.rl:103
 lex.te = ( lex.p)+1
{tok = ARROW; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr80:
//line trace2syz/straceLex.rl:109
 lex.te = ( lex.p)+1
{{goto st218 }}
	goto st174
tr95:
//line trace2syz/straceLex.rl:108
( lex.p) = ( lex.te) - 1
{out.data = string(lex.data[lex.ts:lex.te]); tok = DATETIME; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr101:
//line trace2syz/straceLex.rl:72
( lex.p) = ( lex.te) - 1
{out.val_int, _ = strconv.ParseInt(string(lex.data[lex.ts : lex.te]), 8, 64); tok = INT; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr117:
//line trace2syz/straceLex.rl:84
 lex.te = ( lex.p)+1
{out.data = string(lex.data[lex.ts : lex.te]); tok = MAC; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr122:
//line trace2syz/straceLex.rl:101
 lex.te = ( lex.p)+1
{tok = LSHIFT; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr137:
//line trace2syz/straceLex.rl:82
( lex.p) = ( lex.te) - 1
{tok = RESUMED; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr138:
//line trace2syz/straceLex.rl:82
 lex.te = ( lex.p)+1
{tok = RESUMED; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr183:
//line trace2syz/straceLex.rl:102
 lex.te = ( lex.p)+1
{tok = RSHIFT; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr184:
//line trace2syz/straceLex.rl:111
 lex.te = ( lex.p)+1

	goto st174
tr185:
//line trace2syz/straceLex.rl:99
 lex.te = ( lex.p)+1
{tok = NOT;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr188:
//line trace2syz/straceLex.rl:88
 lex.te = ( lex.p)+1
{tok = LPAREN;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr189:
//line trace2syz/straceLex.rl:90
 lex.te = ( lex.p)+1
{tok = RPAREN;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr190:
//line trace2syz/straceLex.rl:93
 lex.te = ( lex.p)+1
{tok = TIMES; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr197:
//line trace2syz/straceLex.rl:97
 lex.te = ( lex.p)+1
{tok = COLON; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr201:
//line trace2syz/straceLex.rl:110
 lex.te = ( lex.p)+1
{tok = QUESTION; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr202:
//line trace2syz/straceLex.rl:89
 lex.te = ( lex.p)+1
{tok = AT; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr206:
//line trace2syz/straceLex.rl:91
 lex.te = ( lex.p)+1
{tok = LBRACKET_SQUARE;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr207:
//line trace2syz/straceLex.rl:92
 lex.te = ( lex.p)+1
{tok = RBRACKET_SQUARE;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr212:
//line trace2syz/straceLex.rl:94
 lex.te = ( lex.p)+1
{tok = LBRACKET;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr214:
//line trace2syz/straceLex.rl:95
 lex.te = ( lex.p)+1
{tok = RBRACKET;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr215:
//line trace2syz/straceLex.rl:100
 lex.te = ( lex.p)+1
{tok = ONESCOMP; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr216:
//line trace2syz/straceLex.rl:76
 lex.te = ( lex.p)
( lex.p)--
{out.data = ParseString(string(lex.data[lex.ts+1:lex.te-1])); tok = STRING_LITERAL;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr217:
//line trace2syz/straceLex.rl:98
 lex.te = ( lex.p)
( lex.p)--
{tok = AND;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr218:
//line trace2syz/straceLex.rl:106
 lex.te = ( lex.p)+1
{tok = LAND;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr219:
//line trace2syz/straceLex.rl:71
 lex.te = ( lex.p)
( lex.p)--
{out.val_double, _ = strconv.ParseFloat(string(lex.data[lex.ts : lex.te]), 64); tok= DOUBLE; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr220:
//line trace2syz/straceLex.rl:70
 lex.te = ( lex.p)
( lex.p)--
{out.val_int, _ = strconv.ParseInt(string(lex.data[lex.ts : lex.te]), 10, 64); tok = INT;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr222:
//line trace2syz/straceLex.rl:107
 lex.te = ( lex.p)
( lex.p)--
{tok = COMMA;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr224:
//line trace2syz/straceLex.rl:72
 lex.te = ( lex.p)
( lex.p)--
{out.val_int, _ = strconv.ParseInt(string(lex.data[lex.ts : lex.te]), 8, 64); tok = INT; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr232:
//line trace2syz/straceLex.rl:108
 lex.te = ( lex.p)
( lex.p)--
{out.data = string(lex.data[lex.ts:lex.te]); tok = DATETIME; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr235:
//line trace2syz/straceLex.rl:73
 lex.te = ( lex.p)
( lex.p)--
{out.val_uint, _ = strconv.ParseUint(string(lex.data[lex.ts:lex.te]), 0, 64); tok = UINT;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr239:
//line trace2syz/straceLex.rl:82
 lex.te = ( lex.p)
( lex.p)--
{tok = RESUMED; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr241:
//line trace2syz/straceLex.rl:86
 lex.te = ( lex.p)
( lex.p)--
{tok = EQUALS;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr242:
//line trace2syz/straceLex.rl:87
 lex.te = ( lex.p)+1
{tok = LEQUAL; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr243:
//line trace2syz/straceLex.rl:104
 lex.te = ( lex.p)+1
{tok = ARROW; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr244:
//line trace2syz/straceLex.rl:80
 lex.te = ( lex.p)
( lex.p)--
{out.data = string(lex.data[lex.ts:lex.te]); tok = IDENTIFIER;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr249:
//line trace2syz/straceLex.rl:78
 lex.te = ( lex.p)
( lex.p)--
{out.data = string(lex.data[lex.ts:lex.te]); tok = FLAG; {( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr263:
//line trace2syz/straceLex.rl:96
 lex.te = ( lex.p)
( lex.p)--
{tok = OR;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
tr264:
//line trace2syz/straceLex.rl:105
 lex.te = ( lex.p)+1
{tok = LOR;{( lex.p)++;  lex.cs = 174; goto _out }}
	goto st174
	st174:
//line NONE:1
 lex.ts = 0

//line NONE:1
 lex.act = 0

		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof174
		}
	st_case_174:
//line NONE:1
 lex.ts = ( lex.p)

//line trace2syz/lex.go:780
		switch  lex.data[( lex.p)] {
		case 32:
			goto tr184
		case 33:
			goto tr185
		case 34:
			goto st1
		case 38:
			goto st176
		case 39:
			goto st52
		case 40:
			goto tr188
		case 41:
			goto tr189
		case 42:
			goto tr190
		case 43:
			goto st54
		case 44:
			goto tr192
		case 45:
			goto st73
		case 47:
			goto st74
		case 48:
			goto tr195
		case 58:
			goto tr197
		case 60:
			goto st113
		case 61:
			goto st196
		case 62:
			goto st173
		case 63:
			goto tr201
		case 64:
			goto tr202
		case 78:
			goto st203
		case 91:
			goto tr206
		case 93:
			goto tr207
		case 95:
			goto st52
		case 111:
			goto st207
		case 115:
			goto st208
		case 123:
			goto tr212
		case 124:
			goto st217
		case 125:
			goto tr214
		case 126:
			goto tr215
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			switch {
			case  lex.data[( lex.p)] > 13:
				if 49 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
					goto tr196
				}
			case  lex.data[( lex.p)] >= 9:
				goto tr184
			}
		case  lex.data[( lex.p)] > 70:
			switch {
			case  lex.data[( lex.p)] < 97:
				if 71 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 90 {
					goto tr204
				}
			case  lex.data[( lex.p)] > 102:
				if 103 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
					goto tr209
				}
			default:
				goto tr208
			}
		default:
			goto st197
		}
		goto st0
st_case_0:
	st0:
		 lex.cs = 0
		goto _out
	st1:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof1
		}
	st_case_1:
		switch  lex.data[( lex.p)] {
		case 32:
			goto st2
		case 34:
			goto st175
		case 35:
			goto st2
		case 39:
			goto st3
		case 47:
			goto st2
		case 58:
			goto st25
		case 78:
			goto st49
		case 92:
			goto st2
		case 95:
			goto st3
		}
		switch {
		case  lex.data[( lex.p)] < 48:
			if 40 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 42 {
				goto st2
			}
		case  lex.data[( lex.p)] > 57:
			switch {
			case  lex.data[( lex.p)] > 90:
				if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
					goto st2
				}
			case  lex.data[( lex.p)] >= 65:
				goto st4
			}
		default:
			goto st6
		}
		goto st0
	st2:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof2
		}
	st_case_2:
		switch  lex.data[( lex.p)] {
		case 32:
			goto st2
		case 34:
			goto st175
		case 35:
			goto st2
		case 92:
			goto st2
		case 95:
			goto st2
		}
		switch {
		case  lex.data[( lex.p)] < 47:
			if 39 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 42 {
				goto st2
			}
		case  lex.data[( lex.p)] > 58:
			switch {
			case  lex.data[( lex.p)] > 90:
				if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
					goto st2
				}
			case  lex.data[( lex.p)] >= 65:
				goto st2
			}
		default:
			goto st2
		}
		goto st0
	st175:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof175
		}
	st_case_175:
		switch  lex.data[( lex.p)] {
		case 39:
			goto st175
		case 46:
			goto st175
		}
		goto tr216
	st3:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof3
		}
	st_case_3:
		switch  lex.data[( lex.p)] {
		case 32:
			goto st2
		case 34:
			goto st175
		case 35:
			goto st2
		case 39:
			goto st3
		case 92:
			goto st2
		case 95:
			goto st3
		}
		switch {
		case  lex.data[( lex.p)] < 47:
			if 40 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 42 {
				goto st2
			}
		case  lex.data[( lex.p)] > 58:
			switch {
			case  lex.data[( lex.p)] > 90:
				if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
					goto st2
				}
			case  lex.data[( lex.p)] >= 65:
				goto st4
			}
		default:
			goto st2
		}
		goto st0
	st4:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof4
		}
	st_case_4:
		switch  lex.data[( lex.p)] {
		case 32:
			goto st2
		case 34:
			goto st175
		case 35:
			goto st2
		case 39:
			goto st5
		case 47:
			goto st2
		case 58:
			goto st2
		case 92:
			goto st2
		case 95:
			goto st5
		}
		switch {
		case  lex.data[( lex.p)] < 48:
			if 40 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 42 {
				goto st2
			}
		case  lex.data[( lex.p)] > 57:
			switch {
			case  lex.data[( lex.p)] > 90:
				if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
					goto st2
				}
			case  lex.data[( lex.p)] >= 65:
				goto st5
			}
		default:
			goto st5
		}
		goto st0
	st5:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof5
		}
	st_case_5:
		switch  lex.data[( lex.p)] {
		case 32:
			goto st2
		case 34:
			goto st175
		case 35:
			goto st2
		case 39:
			goto st5
		case 47:
			goto st2
		case 58:
			goto st2
		case 92:
			goto st2
		case 95:
			goto st5
		}
		switch {
		case  lex.data[( lex.p)] < 48:
			if 40 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 42 {
				goto st2
			}
		case  lex.data[( lex.p)] > 57:
			switch {
			case  lex.data[( lex.p)] > 90:
				if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
					goto st2
				}
			case  lex.data[( lex.p)] >= 65:
				goto st5
			}
		default:
			goto st5
		}
		goto st0
	st6:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof6
		}
	st_case_6:
		switch  lex.data[( lex.p)] {
		case 32:
			goto st2
		case 34:
			goto st175
		case 35:
			goto st2
		case 46:
			goto st7
		case 47:
			goto st2
		case 58:
			goto st2
		case 92:
			goto st2
		case 95:
			goto st2
		}
		switch {
		case  lex.data[( lex.p)] < 48:
			if 39 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 42 {
				goto st2
			}
		case  lex.data[( lex.p)] > 57:
			switch {
			case  lex.data[( lex.p)] > 90:
				if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
					goto st2
				}
			case  lex.data[( lex.p)] >= 65:
				goto st2
			}
		default:
			goto st22
		}
		goto st0
	st7:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof7
		}
	st_case_7:
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st8
		}
		goto st0
	st8:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof8
